--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://javadhd.com/404.html">
+<link rel="canonical" href="https://www.javadhd.com/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.5cfc680b1eeaeef9efbced92d46c2a9e876b72ee14fba85846afc4cff9e6e6f8.css" integrity="sha256-XPxoCx7q7vnvvO2S1Gwqnodrcu4U&#43;6hYRq/Ez/nm5vg=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://javadhd.com/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://javadhd.com/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://javadhd.com/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://javadhd.com/apple-touch-icon.png">
-<link rel="mask-icon" href="https://javadhd.com/safari-pinned-tab.svg">
+<link rel="icon" href="https://www.javadhd.com/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://www.javadhd.com/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://www.javadhd.com/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://www.javadhd.com/apple-touch-icon.png">
+<link rel="mask-icon" href="https://www.javadhd.com/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -57,7 +57,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://javadhd.com/404.html" />
+<meta property="og:url" content="https://www.javadhd.com/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://javadhd.com/" accesskey="h" title="JAVADHD Blog (Alt + H)">JAVADHD Blog</a>
+            <a href="https://www.javadhd.com/" accesskey="h" title="JAVADHD Blog (Alt + H)">JAVADHD Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -113,7 +113,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://javadhd.com/">JAVADHD Blog</a></span>
+    <span>&copy; 2023 <a href="https://www.javadhd.com/">JAVADHD Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
